tests/NormalTests/paczka1/small_fuzzy/25961027.err
Error in line 3: ElJz4 S94 24,0
Error in line 11: ayUfRH S224 47,9
Error in line 12: ayUfRH S216 38,2
Error in line 14: uMmm1WOKh S327 98,9
